--- a/app/views/challenges/index.html.erb
+++ b/app/views/challenges/index.html.erb
@@ -19,6 +19,7 @@
           <th>Points Available</th>
           <th>Route</th>
           <th>Scores</th>
+          <th>Statistics</th>
         </tr>
       </thead>
       <tbody>
