--- a/app/views/static_pages/_private_results.html.erb
+++ b/app/views/static_pages/_private_results.html.erb
@@ -4,7 +4,7 @@
 <%= content_for(:body_attributes) do %> data-no-turbolink <% end %>
 
 <div class="jumbotron center">
-  <h1>Official Results <%= Time.now.year %></h1>
+  <h1>Official Results</h1>
   <br />
   <p>These results are not visible publicly until you
      <%= link_to "publish them", challenges_path %>.</p>
