--- a/app/views/static_pages/_private_index.html.erb
+++ b/app/views/static_pages/_private_index.html.erb
@@ -17,7 +17,7 @@
       <div class="panel-heading">
         <h4 class="panel-title">Note</h4>
       </div>
-      <div class="panel-body">
+      <div class="panel-body bold">
         Expected times are shown in brackets. You can click on them to add actual values once they are known.
       </div>
     </div>
@@ -35,7 +35,7 @@
         </div>
         <div class="panel-body">
           <h4>
-            Please enter some information about this year's challenge!
+            Please enter some information about this year&rsquo;s challenge!
           </h4>
         </div>
       </div>
