--- a/app/views/teams/index.html.erb
+++ b/app/views/teams/index.html.erb
@@ -7,41 +7,52 @@
 </div>
 
 <% count = 1 %>
-<% @challenges.order(:time_allowed).each do |challenge| %>
-<div class="row">
-  <div class="col-md-12 col-xs-12">
-    <h3><%= challenge.time_allowed %> Hour Challenge</h3>
-  </div>
+<div class="panel-group" id="accordion" role="tablist" aria-multiselectable="true">
+  <% @challenges.order(date: :DESC).each_with_index do |challenge, idx| %>
+    <div class="panel panel-default">
+      <div class="panel-heading" role="tab" id="heading<%= idx %>">
+        <h4 class="panel-title">
+          <a role="button" data-toggle="collapse" data-parent="#accordion" href="#collapse<%= idx %>" aria-expanded="false" aria-controls="collapse<%= idx %>">
+            <%= challenge.time_allowed %> Hour - <%= challenge.date.strftime("%-d %B %Y") %>
+          </a>
+        </h4>
+      </div>
+
+      <div id="collapse<%= idx %>" class="panel-collapse collapse<%= is_current_year(challenge) %>" role="tabpanel" aria-labelledby="heading<%= idx %>">
+        <div class="panel-body">
+          <div class="row">
+            <div class="col-md-12 col-xs-12 wide-table">
+              <table class="table table-striped">
+                <thead>
+                  <tr>
+                    <!-- <th>Number</th> -->
+                    <th>Name</th>
+                    <th>Group</th>
+                    <th>Start Time</th>
+                    <th colspan="2">Actions</th>
+                  </tr>
+                </thead>
+                <tbody>
+                  <% challenge.teams.order(:planned_start_time).each do |team| %>
+                    <tr>
+                      <!-- <td><%= count %></td> -->
+                      <td><%= team.name %></td>
+                      <td><%= team.group.to_s.titleize %></td>
+                      <td><%= start_time(team) %></td>
+                      <td><%= link_to "Edit", edit_team_path(team) %></td>
+                      <td><%= link_to "Score", score_team_path(team) %><% if team.score-%>&nbsp;&nbsp;&#10003;<% end %></td>
+                    </tr>
+                    <% count += 1 %>
+                  <% end %>
+                </tbody>
+              </table>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+  <% end %>
 </div>
-<div class="row">
-  <div class="col-md-12 col-xs-12 wide-table">
-    <table class="table table-striped">
-      <thead>
-        <tr>
-          <th>Number</th>
-          <th>Name</th>
-          <th>Group</th>
-          <th>Start Time</th>
-          <th colspan="2">Actions</th>
-        </tr>
-      </thead>
-      <tbody>
-        <% challenge.teams.order(:planned_start_time).each do |team| %>
-          <tr>
-            <td><%= count %></td>
-            <td><%= team.name %></td>
-            <td><%= team.group.to_s.titleize %></td>
-            <td><%= start_time(team) %></td>
-            <td><%= link_to "Edit", edit_team_path(team) %></td>
-            <td><%= link_to "Score", score_team_path(team) %><% if team.score-%>&nbsp;&nbsp;&#10003;<% end %></td>
-          </tr>
-          <% count += 1 %>
-        <% end %>
-      </tbody>
-    </table>
-  </div>
-</div>
-<% end %>
 
 <br />
 
