Update static pages

--- a/app/views/static_pages/about.html.erb
+++ b/app/views/static_pages/about.html.erb
@@ -3,18 +3,13 @@
 <div class="row">
   <div class="col-md-10 col-md-offset-1">
     <p>The Sodbury Challenge is an overnight orienteering exercise held in the
-    Sodbury/Wickwar/Rangeworthy area of South Gloucestershire. The event is open to all
-    Scouts and Explorers within the County aged between 10 and 18.</p>
+    Sodbury/Wickwar/Rangeworthy area of South Gloucestershire. The event is open to all Scouts and Explorers within the County aged between 10 and 18.</p>
 
-    <p>The Challenge consists of a 5 and an 8 hour exercise with Scouts and Explorers
-    able to enter teams for either duration and the winning team in each section being
-    the team gaining the most points on the night.</p>
+    <p>The Challenge consists of a 5 and an 8 hour exercise with Scouts and Explorers able to enter teams for either duration and the winning team in each section being the team gaining the most points on the night. Scouts and Explorers compete separately in each section, there are four trophies in total.</p>
 
-    <p><strong>5 HOUR</strong> &ndash; A five hour exercise for teams of 3&ndash;5
-    members. First team out at 6pm and then the rest at 10 minute intervals.</p>
+    <p><strong>5 HOUR</strong> &ndash; A five hour exercise for teams of 3&ndash;5 members. First team out at 6pm and then the rest at 10 minute intervals.</p>
 
-    <p><strong>8 HOUR</strong> &ndash; An eight hour exercise for teams of 3&ndash;5
-    members. First team out at 10pm and then the rest at 15 minute intervals.</p>
+    <p><strong>8 HOUR</strong> &ndash; An eight hour exercise for teams of 3&ndash;5 members. First team out at 10pm and then the rest at 15 minute intervals.</p>
 
   </div>
 </div>
@@ -25,11 +20,30 @@
       <div class="panel-heading">
         <h4 class="panel-title">Note</h4>
       </div>
-      <div class="panel-body">
-        This year Explorers can enter the five hour competition or the eight hour one.
-        Scouts and Explorers compete separately, with Scouts and Explorer trophies for
-        both the 5 and 8 hour exercises.
+      <div class="panel-body bold">
+        For 2016, if there is enough interest, we will look to run a Leaders Section. Please contact us if you would like to enter a leaders team.
       </div>
     </div>
+  </div>
+</div>
+
+<div class="row">
+  <div class="col-md-10 col-md-offset-1">
+    <div class="panel panel-danger">
+      <div class="panel-heading">
+        <h4 class="panel-title">Note</h4>
+      </div>
+      <div class="panel-body bold">
+        All teams entering the competition should be entering their own activity notification form to the relavent ADC.
+      </div>
+    </div>
+  </div>
+</div>
+
+<div class="row vspace">
+  <div class="col-md-10 col-md-offset-1">
+    <p>
+      For more details or to make enquiries about the event please e-mail <a href="mailto:&#115;&#111;&#100;&#098;&#117;&#114;&#121;&#099;&#104;&#097;&#108;&#108;&#101;&#110;&#103;&#101;&#064;&#099;&#104;&#105;&#112;&#112;&#105;&#110;&#103;&#115;&#111;&#100;&#098;&#117;&#114;&#121;&#115;&#099;&#111;&#117;&#116;&#115;&#046;&#111;&#114;&#103;&#046;&#117;&#107;">sodburychallenge@chippingsodburyscouts.org.uk</a>.
+    </p>
   </div>
 </div>
