--- a/app/views/static_pages/rules.html.erb
+++ b/app/views/static_pages/rules.html.erb
@@ -16,10 +16,10 @@
 <div class="row">
   <div class="col-md-10 col-md-offset-1">
     <ol>
-      <li>All entry forms and fees must be in by the end of Saturday 3 October 2015.</li>
+      <li>All entry forms and fees must be in by the end of Saturday 1<sup>st</sup> October 2016.</li>
 
       <li>Entrants/teams must be able to read a map and understand eight-figure grid
-      references, e.g. 1235,1230 (the fourth digit will be a 0 or a 5).</li>
+      references, e.g. 1235-1230 (the fourth digit will be a 0 or a 5).</li>
 
       <li>Entrants/teams must be equipped properly and dressed to suit the weather.
       Wellington boots and trainers are not suitable. If wet, a waterproof coat and
