--- a/app/views/static_pages/about.html.erb
+++ b/app/views/static_pages/about.html.erb
@@ -34,7 +34,7 @@
         <h4 class="panel-title">Note</h4>
       </div>
       <div class="panel-body bold">
-        All teams entering the competition should be entering their own activity notification form to the relavent ADC.
+        All teams entering the competition should be entering their own activity notification form to the relevant ADC.
       </div>
     </div>
   </div>
