--- a/app/views/challenges/show.html.erb
+++ b/app/views/challenges/show.html.erb
@@ -30,7 +30,10 @@
         new_goal_path(challenge: @challenge.id), :class=>'btn btn-block btn-success' %>
   </div>
   <div class="col-md-3 vspace">
-    <%= link_to raw("<span class=\"glyphicon glyphicon-circle-arrow-down\"></span> Download as PDF"), challenge_path(@challenge, format: :pdf), :class=>'btn btn-block btn-default' %>
+    <%= link_to raw("<span class=\"glyphicon glyphicon-circle-arrow-down\"></span> Download Team Sheet as PDF"), challenge_path(@challenge, format: :pdf), :class=>'btn btn-block btn-default' %>
+  </div>
+  <div class="col-md-3 vspace">
+    <%= link_to raw("<span class=\"glyphicon glyphicon-circle-arrow-down\"></span> Download Clipper Sheet as PDF"), clipper_path(@challenge, format: :pdf), :class=>'btn btn-block btn-default' %>
   </div>
 </div>
 
