--- a/app/views/teams/index.html.erb
+++ b/app/views/teams/index.html.erb
@@ -28,6 +28,7 @@
                     <!-- <th>Number</th> -->
                     <th>Name</th>
                     <th>Group</th>
+                    <th>Members</th>
                     <th>Start Time</th>
                     <th colspan="2">Actions</th>
                   </tr>
@@ -38,6 +39,7 @@
                       <!-- <td><%= count %></td> -->
                       <td><%= team.name %></td>
                       <td><%= team.group.to_s.titleize %></td>
+                      <td><%= team.members.size %></td>
                       <td><%= start_time(team) %></td>
                       <td><%= link_to "Edit", edit_team_path(team) %></td>
                       <td><%= link_to "Score", score_team_path(team) %><% if team.score %>&nbsp;&nbsp;&#10003;<% end %></td>
