Tweak about page

--- a/app/views/static_pages/about.html.erb
+++ b/app/views/static_pages/about.html.erb
@@ -21,7 +21,7 @@
         <h4 class="panel-title">Note</h4>
       </div>
       <div class="panel-body bold">
-        For 2016, if there is enough interest, we will look to run a Leaders Section. Please contact us if you would like to enter a leaders team.
+        For 2016, we will be running a Leaders Section. Please contact us if you would like to enter a team.
       </div>
     </div>
   </div>
@@ -43,7 +43,7 @@
 <div class="row vspace">
   <div class="col-md-10 col-md-offset-1">
     <p>
-      For more details or to make enquiries about the event please e-mail <a href="mailto:&#115;&#111;&#100;&#098;&#117;&#114;&#121;&#099;&#104;&#097;&#108;&#108;&#101;&#110;&#103;&#101;&#064;&#099;&#104;&#105;&#112;&#112;&#105;&#110;&#103;&#115;&#111;&#100;&#098;&#117;&#114;&#121;&#115;&#099;&#111;&#117;&#116;&#115;&#046;&#111;&#114;&#103;&#046;&#117;&#107;">sodburychallenge@chippingsodburyscouts.org.uk</a>.
+      For more details or to make enquiries about the event please <a href="mailto:&#115;&#111;&#100;&#098;&#117;&#114;&#121;&#099;&#104;&#097;&#108;&#108;&#101;&#110;&#103;&#101;&#064;&#099;&#104;&#105;&#112;&#112;&#105;&#110;&#103;&#115;&#111;&#100;&#098;&#117;&#114;&#121;&#115;&#099;&#111;&#117;&#116;&#115;&#046;&#111;&#114;&#103;&#046;&#117;&#107;">e&dash;mail us</a>.
     </p>
   </div>
 </div>
