Small tweaks for 2017

--- a/app/views/static_pages/about.html.erb
+++ b/app/views/static_pages/about.html.erb
@@ -21,7 +21,7 @@
         <h4 class="panel-title">Note</h4>
       </div>
       <div class="panel-body bold">
-        For 2016, we will be running a Leaders Section. Please contact us if you would like to enter a team.
+        For 2017, if there is enough interest, we will be running a Leaders Section. Please contact us if you would like to enter a team.
       </div>
     </div>
   </div>
