--- a/app/assets/stylesheets/main.scss
+++ b/app/assets/stylesheets/main.scss
@@ -80,9 +80,11 @@ ol li {
 }
 #official-time {
   &:hover {
-    color: $gray-light;
+    color: #fff;
   }
 }
+
+.navbar-brand{font-size:16px;}
 
 // Footer
 footer {
