--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -37,7 +37,7 @@
             <% else %>
               <li><%= link_to "Log In", login_path %></li>
             <% end %>
-            <li><a id="official-time">Official Time:<span id="clock"></span></a></li>
+            <li><a id="official-time">Official Time: <span class="clock"></span></a></li>
           </ul>
         </div><!--/.nav-collapse -->
       </div>
