Update about page

--- a/app/views/static_pages/about.html.erb
+++ b/app/views/static_pages/about.html.erb
@@ -3,9 +3,9 @@
 <div class="row">
   <div class="col-md-10 col-md-offset-1">
     <p>The Sodbury Challenge is an overnight orienteering exercise held in the
-    Sodbury/Wickwar/Rangeworthy area of South Gloucestershire. The event is open to all Scouts and Explorers within the County aged between 10 and 18.</p>
+    Sodbury/Wickwar/Rangeworthy area of South Gloucestershire. The event is open to all Scouts, Explorers and Guides within the County aged between 10 and 18.</p>
 
-    <p>The Challenge consists of a 5 and an 8 hour exercise with Scouts and Explorers able to enter teams for either duration and the winning team in each section being the team gaining the most points on the night. Scouts and Explorers compete separately in each section, there are four trophies in total.</p>
+    <p>The Challenge consists of a 5 and an 8 hour exercise with the winning team in each section being the team gaining the most points on the night. The 5 hour exercise is open to ages up to 14, the 8 hour exercise is open to those aged 14 and above. We also allow inexperienced teams and non-competitive teams who just want to take part, usually with a leader to help.</p>
 
     <p><strong>5 HOUR</strong> &ndash; A five hour exercise for teams of 3&ndash;5 members. First team out at 6pm and then the rest at 10 minute intervals.</p>
 
@@ -21,7 +21,7 @@
         <h4 class="panel-title">Note</h4>
       </div>
       <div class="panel-body bold">
-        For 2017, if there is enough interest, we will be running a Leaders Section. Please contact us if you would like to enter a team.
+        For 2018, we will be running an additional section for Leaders and Network groups.
       </div>
     </div>
   </div>
