Update the dates

--- a/app/views/static_pages/about.html.erb
+++ b/app/views/static_pages/about.html.erb
@@ -11,6 +11,7 @@
 
     <p><strong>8 HOUR</strong> &ndash; An eight hour exercise for teams of 3&ndash;5 members. First team out at 10pm and then the rest at 15 minute intervals.</p>
 
+    <p>This year's event will take place on Saturday 13th October 2018.</p>
   </div>
 </div>
 
