--- a/app/views/static_pages/kit.html.erb
+++ b/app/views/static_pages/kit.html.erb
@@ -15,7 +15,7 @@
       <li>1 mobile phone per team (with credit/minutes)</li>
       <li>Reflective Jackets (1 for every member)</li>
       <li>Snacks and drinks for the hike</li>
-      <li>All teams members should be wearing their group neckerchief at all times</li>
+      <li>All team members should be wearing their group neckerchief at all times</li>
     </ul>
 
   </div>
