Update wording slightly

--- a/app/views/static_pages/about.html.erb
+++ b/app/views/static_pages/about.html.erb
@@ -3,9 +3,11 @@
 <div class="row">
   <div class="col-md-10 col-md-offset-1">
     <p>The Sodbury Challenge is an overnight orienteering exercise held in the
-    Sodbury/Wickwar/Rangeworthy area of South Gloucestershire. The event is open to all Scouts, Explorers and Guides within the County aged between 10 and 18.</p>
+    Sodbury/Wickwar/Rangeworthy area of South Gloucestershire. The event is open to all Scouts, Explorers and Guides aged between 10 and 18.</p>
 
-    <p>The Challenge consists of a 5 and an 8 hour exercise with the winning team in each section being the team gaining the most points on the night. The 5 hour exercise is open to ages up to 14, the 8 hour exercise is open to those aged 14 and above. We also allow inexperienced teams and non-competitive teams who just want to take part, usually with a leader to help.</p>
+    <p>The Challenge consists of a 5 and an 8 hour exercise with the winning team in each section being the team gaining the most points in the allotted time. The 5 hour exercise is open to ages up to 14, the 8 hour exercise is open to ages up to 18. If you are under 14, you may enter either exercise, those 14 and above must enter the 8 hour exercise.</p>
+
+    <p>We also allow inexperienced teams and non-competitive teams who just want to take part, usually with a leader to help.</p>
 
     <p><strong>5 HOUR</strong> &ndash; A five hour exercise for teams of 3&ndash;5 members. First team out at 6pm and then the rest at 10 minute intervals.</p>
 
