Remove line break

--- a/app/views/static_pages/about.html.erb
+++ b/app/views/static_pages/about.html.erb
@@ -2,8 +2,7 @@
 
 <div class="row">
   <div class="col-md-10 col-md-offset-1">
-    <p>The Sodbury Challenge is an overnight orienteering exercise held in the
-    Sodbury/Wickwar/Rangeworthy area of South Gloucestershire. The event is open to all Scouts, Explorers and Guides aged between 10 and 18.</p>
+    <p>The Sodbury Challenge is an overnight orienteering exercise held in the Sodbury/Wickwar/Rangeworthy area of South Gloucestershire. The event is open to all Scouts, Explorers and Guides aged between 10 and 18.</p>
 
     <p>The Challenge consists of a 5 and an 8 hour exercise with the winning team in each section being the team gaining the most points in the allotted time. The 5 hour exercise is open to ages up to 14, the 8 hour exercise is open to ages up to 18. If you are under 14, you may enter either exercise, those 14 and above must enter the 8 hour exercise.</p>
 
