--- a/app/views/static_pages/_public_results.html.erb
+++ b/app/views/static_pages/_public_results.html.erb
@@ -12,6 +12,7 @@
     <% scout_teams = challenge.teams.where(group: 0).where(disqualified: false) %>
     <% explorer_teams = challenge.teams.where(group: 1).where(disqualified: false) %>
     <% non_competitive_teams = challenge.teams.where(group: 2).where(disqualified: false) %>
+    <% network_leader_teams = challenge.teams.where(group: [3, 4]).where(disqualified: false) %>
     <% disqualified_teams = challenge.teams.where(disqualified: true) %>
     <div class="row vspace">
       <div class="col-md-12 col-xs-12">
@@ -69,6 +70,37 @@
             <tbody>
               <% position = 1 %>
               <% explorer_teams.order(:score).reverse.each do |team| %>
+                <tr>
+                  <td><%= position.ordinalize %></td>
+                  <td><%= team.name %></td>
+                  <td><%= team.score %></td>
+                  <% position += 1 %>
+                </tr>
+              <% end %>
+            </tbody>
+          </table>
+        </div>
+      </div>
+    <% end %>
+    <% if network_leader_teams.size > 0 %>
+      <div class="row vspace">
+        <div class="col-md-12 col-xs-12">
+          <h3>Network &amp; Leaders</h3>
+        </div>
+      </div>
+      <div class="row vspace">
+        <div class="col-md-12 col-xs-12 wide-table">
+          <table class="table table-striped">
+            <thead>
+              <tr>
+                <th>Position</th>
+                <th>Team</th>
+                <th>Score</th>
+              </tr>
+            </thead>
+            <tbody>
+              <% position = 1 %>
+              <% network_leader_teams.order(:score).reverse.each do |team| %>
                 <tr>
                   <td><%= position.ordinalize %></td>
                   <td><%= team.name %></td>
