Re-arrange results pages

--- a/app/assets/stylesheets/static_pages.scss
+++ b/app/assets/stylesheets/static_pages.scss
@@ -1,3 +1,4 @@
-// Place all the styles related to the StaticPages controller here.
-// They will need to be imported into application.css.scss.
-// You can use Sass (SCSS) here: http://sass-lang.com/
+h2.panel-title {
+  font-size: 1.8em;
+  margin: .1em 0;
+}
